hard-gists/a4cfdc19144e7bd634a8/run.log
=== Docker Run Log for a4cfdc19144e7bd634a8 ===
Started at: Mi 29. Okt 18:55:17 CET 2025

[2025-10-29 18:55:18] START: Running container for a4cfdc19144e7bd634a8
[2025-10-29 18:55:18] SUCCESS: Container edc6284ae00f199bf545040152c8c38e65d8c1245dc27e6c5d0ccab492087fe7 started for a4cfdc19144e7bd634a8
=== Container logs for a4cfdc19144e7bd634a8 ===
  File "/snippet.py", line 9
    print sys.argv[0] + " /path/to/ssl.crt /path/to/ssl.key ProcessedMachineIdentifier"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a4cfdc19144e7bd634a8 ===
[2025-10-29 18:55:20] INFO: Container edc6284ae00f199bf545040152c8c38e65d8c1245dc27e6c5d0ccab492087fe7 has stopped
